[gd_scene load_steps=3 format=3 uid="uid://bmugaxn0i0pys"]

[ext_resource type="Script" path="res://order.gd" id="1_m1rxq"]
[ext_resource type="Texture2D" uid="uid://c2xterihaajsh" path="res://assets/order paper.png" id="2_12gqx"]

[node name="Order" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1rxq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.769531, 1)
texture = ExtResource("2_12gqx")
centered = false

[node name="Contents" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 197.0
offset_bottom = 512.0

[node name="Labels" type="VBoxContainer" parent="Contents"]
layout_mode = 2

[node name="Number" type="Label" parent="Contents/Labels"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "00"
horizontal_alignment = 1

[node name="Percent" type="Label" parent="Contents/Labels"]
visible = false
layout_mode = 2
text = "% to eat: "
horizontal_alignment = 1

[node name="EatButton" type="Button" parent="Contents"]
visible = false
layout_mode = 2
text = "Eat Pizza"

[node name="FinishButton" type="Button" parent="Contents"]
visible = false
layout_mode = 2
text = "Finish Eating"

[connection signal="button_up" from="Contents/EatButton" to="." method="_on_eat_button_button_up"]
[connection signal="button_up" from="Contents/FinishButton" to="." method="_on_finish_button_button_up"]
